--- a/src/modules/aboutPage/aboutPageStyle.css
+++ b/src/modules/aboutPage/aboutPageStyle.css
@@ -1,16 +1,23 @@
-.about-text{
+.about-text {
     display: flex;
     justify-content: space-around; 
 }
 
-.about-text__cinema{
+.about-text__cinema {
     padding: 10px;
+    text-align: center;
 }
 
-p{
+p {
+    padding-left: 20px;
     font-size: 20px;
 }
 
-h3{
+h3 {
+    padding-left: 20px;
     font-size: 40px;
+}
+
+img{
+border-radius:5% ;
 }
