--- a/src/modules/header/header.css
+++ b/src/modules/header/header.css
@@ -4,7 +4,7 @@
     height: 70px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .header__page-container{
