--- a/src/modules/ratingPage/components/raitingCards.css
+++ b/src/modules/ratingPage/components/raitingCards.css
@@ -1,15 +1,16 @@
 .movie {
     width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .card__image {
     width: 400px;
     height: 400px;
-    position: relative;
     border: 2px solid black;
-    margin-left: 420px;
+    
     border-radius: 5%;
 }
 
@@ -38,12 +39,26 @@
     width: 45px;
     height: 45px;
     position: absolute;
-    margin-left: 780px;
     z-index: 1;
-    background-color: rgb(14, 230, 212);
+    background-color: rgb(223, 155, 77);
     color: aliceblue;
     border: none;
     border-radius: 10px;
     cursor: pointer;
     outline: none;
+    right: 0px;
 }
+
+.movie__card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;       
+}
+
+.card__wrapper-image {
+    height: auto;
+    width: auto;position: relative; 
+}
+
+
